compiler/tools/fpp-check/test/spec_loc_struct_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/spec_loc_struct_error.fpp: 1.18
locate type S at "incorrect.fpp"
                 ^
error: incorrect location path [ local path prefix ]/compiler/tools/fpp-check/test/incorrect.fpp
actual location is [ local path prefix ]/compiler/tools/fpp-check/test/spec_loc_struct_error.fpp: 3.1
struct S { x: U32 }
^
